<resources>
    <string name="app_name">金眼风控</string>
    <string name="tab1">首页</string>
    <string name="tab2">我的报告</string>
    <string name="tab3">3</string>
    <string name="tab4">4</string>
    <string name="mine">我的</string>
    <string name="skip">跳过</string>
    <string name="loading">加载中…</string>
    <string name="error_view_no_data">暂无内容</string>
    <string name="error_view_loading">加载中…</string>
    <string name="error_view_loading_friend">数据初始化中…</string>
    <string name="error_view_loading_local_friend">获取附近的程序员中…</string>
    <string name="error_view_load_error_click_to_refresh">内容加载失败\r\n点击重新加载</string>
    <string name="error_view_network_error_click_to_refresh">没有可用的网络</string>
    <string name="footer_type_net_error">网络错误</string>

    <string name="tip_network_error">没有可用的网络</string>

    <string name="need_lbs_permission_hint">需要定位权限</string>
    <string name="upload_lbs_info_hint">上传位置信息失败</string>
    <!--新版登录专用-->
    <string name="login_btn">登录</string>
    <string name="login_input_username_hint">手机号或邮箱</string>
    <string name="login_input_username_hint_error">请输入正确的手机号&#8230;</string>
    <string name="login_password_hint">请输入您的登录密码</string>
    <string name="login_hold_hint">记住密码</string>
    <string name="login_forget_hint">忘记密码？</string>
    <string name="u_login_forget_hint"><u>忘记密码？</u></string>

    <string name="login_smscode_hint">验证码登录</string>
    <string name="login_password_tip">密码登录</string>
    <string name="login_registerfirst_tip">没有帐号？立即注册</string>
    <string name="login_register_hint">注册</string>
    <string name="login_other_hint">其他方式登录</string>
    <string name="register_input_username_hint">手机号</string>
    <string name="register_username_hint">用户名</string>
    <string name="register_sms_auth_code">短信验证码</string>
    <string name="register_sms_hint">获取验证码</string>
    <string name="register_sms_wait_hint">别激动,休息一下呗&#8230;</string>
    <string name="register_done_hint">完成</string>
    <string name="register_man_hint">男士</string>
    <string name="register_female_hint">女士</string>
    <string name="retrieve_pwd_email_label_one">邮箱用户找回密码，请</string>
    <string name="retrieve_pwd_email_label"><a>点击这里</a></string>
    <string name="reset_pwd_hint">请输入至少六位新密码</string>
    <string name="register_username_error">用户名太长&#8230;</string>
    <string name="hint_password">密码</string>
    <string name="register_pwd_hint">密码长度为6到12位</string>
    <string name="hint_username_ok">请输入您的手机号码</string>
    <string name="user_hint_login">点击头像登录</string>
    <string name="reset_pwd_label">重置密码</string>
    <string name="retrieve_pwd_label">找回密码</string>
    <string name="reset_pwd_submit">确认</string>
    <string name="request_error_hint">网络请求失败,请重试&#8230;</string>
    <string name="login_success_hint">登录成功</string>
    <string name="send_sms_code_success_hint">已成功发送验证码</string>
    <string name="reset_success_hint">密码重置成功</string>
    <string name="register_success_hint">注册成功</string>
    <string name="share_hint">抱歉,您未安装该应用,不能分享&#8230;</string>
    <string name="login_hint">抱歉,您未安装该应用,不能登录&#8230;</string>
    <string name="login_wechat_hint">正在启动微信中&#8230;</string>
    <string name="login_tencent_hint">正在启动QQ中&#8230;</string>
    <string name="login_weibo_hint">正在启动微博中&#8230;</string>
    <string name="message_pwd_error">密码错误</string>
    <string name="usernull">用户名未填写！！！</string>


    <string name="tv_my_score">积分 0</string>
    <string name="zero">0</string>



    <string name="tip_double_click_exit">再次点击退出app</string>
    <string name="progress_submit">正在提交…</string>
    <string name="progress_holdon">请求中，请稍等…</string>

    <array name="g_default_loading_fg">
        <item>#00bcd4</item>
        <item>#9c27b0</item>
        <item>#5677fc</item>
        <item>#ff9800</item>
        <item>#e91e63</item>
    </array>

    <string name="copy_success">复制成功</string>


    <!--设置-->
    <string name="message">第一条目</string>
    <string name="actionbar_title_setting">设置</string>
    <string name="actionbar_title_about_gcs">关于管云风控</string>

    <!--设置中心-->
    <string name="loading_img">加载图片</string>
    <string name="clean_cache">清理缓存</string>
    <string name="double_click_exit">双击退出</string>
    <string name="update">检查更新</string>
    <string name="loading_more">自动加载\"更多\"</string>
    <string name="about" translatable="false">关于管云</string>
    <string name="feedback">意见反馈</string>
    <string name="personal_data">个人资料</string>
    <string name="submit_feedback_hint">提交反馈</string>
    <string name="setting_cancel">注销</string>
    <string name="logout_success_hint">退出登录成功</string>
    <string name="grade">去评分</string>

    <string name="osc_site">官网</string>
    <string name="know_more">了解更多</string>
    <string name="git_app">Git客户端</string>

    <string name="share_to">分享</string>
    <string name="copyright">© 2017 guanchesuo.com All rights reserved.</string>
    <string name="you_have_unread_messages">你有%s条未读消息</string>

    <string name="state_network_error">网络错误</string>
    <string name="state_loading">正在加载…</string>
    <string name="state_not_more">没有更多数据</string>
    <string name="state_load_error">加载失败</string>
    <string name="state_refreshing">正在刷新</string>
    <string name="state_loading_error">数据加载中&#8230;</string>
    <string name="state_submit">正在提交中&#8230;</string>
    <!--首页-->
    <string name="menu_base_info">基本信息</string>
    <string name="menu_shop_info">消费信息认证</string>
    <string name="menu_social_info">社交信息认证</string>
    <string name="identity_string">身份信息</string>
    <string name="bank_string">银行卡</string>
    <string name="zhima_string">芝麻信用</string>
    <string name="driver_card">驾驶证</string>
    <string name="driver_card_num">驾驶证号</string>
    <string name="alipay_string">支付宝</string>
    <string name="taobao_string">淘宝</string>
    <string name="jd_string">京东</string>
    <string name="credit_card">信用卡</string>
    <string name="operator_string">运营商</string>
    <string name="contact_string">通讯录授权</string>
    <string name="email_string">邮箱认证</string>
    <string name="name">姓名</string>
    <string name="hint_et_name">请输入您的姓名</string>
    <string name="hint_et_idnumber">请输入您的身份证号</string>
    <string name="hint_et_drivercard">请输入您的驾驶证号</string>
    <string name="idcard_num">身份证</string>
    <string name="auth_taobao_tip">请登入淘宝账号进行授权</string>
    <string name="check_text_taobao">同意《淘宝数据采集服务协议》</string>
    <string name="operator_phone_string">手机号码</string>
    <string name="operator_pass_string">服务密码</string>
    <string name="zhima_tip_string">请填写资料进行授权</string>
    <string name="auth_jd_tip_string">请登录京东帐号进行授权</string>
    <string name="auth_username">账户</string>
    <string name="username_hinttip_string">用户名/邮箱/手机号</string>
    <string name="hint_input_passstring">请输入您的密码</string>
    <string name="agreejd_tip_string">同意《京东授权协议》</string>
    <string name="alipay_tip_string">请登录支付宝帐号进行授权</string>
    <string name="agreealipay_tip_string">同意《支付宝数据采集服务协议》</string>
    <string name="bt_beginauth_string">开始认证</string>
    <string name="bankcard_user_logo">持卡人</string>
    <string name="bankcard_number_tip">银行卡号</string>
    <string name="error_bankcard_number_tip">请输入正确的银行卡号</string>
    <string name="re_mobile_tip">预留手机号</string>
    <string name="auth_message_tip">短信验证码</string>
    <string name="confirm_btn">确认</string>
    <string name="imme_auth_btn">立即授权</string>
    <string name="read_auth_book"><u>查看授权协议书</u></string>
    <string name="contact_auth_string">通讯录授权</string>
    <string name="setting_reset_password">重置登录密码</string>
    <string name="setting_feedback">意见反馈</string>
    <string name="setting_loginout">退出登录</string>
    <string name="feedback_hint">请输入反馈意见</string>
    <string name="operator_authpassword_hint">请输入服务密码</string>
    <string name="operator_auth_hint">请输入您的手机号</string>
    <string name="credituser_auth_hint">信用卡绑定邮箱</string>
    <string name="unlogin_string">未登录</string>
    <string name="suprisece_hint">敬请期待！</string>
    <string name="banktype">银行名称</string>

    <string name="meglive_title">人脸活体检测Demo</string>
    <string name="meglive_version">版本号：</string>
    <string name="meglive_livenessBtn">活体检测</string>
    <string name="meglive_auth_progress">正在联网授权中...</string>
    <string name="meglive_auth_again">重新联网授权</string>
    <string name="meglive_auth_failed">联网授权失败！请检查网络或找服务商</string>
    <string name="meglive_returnbtn">返回首页</string>
    <string name="meglive_liveness_again">重新验证活体</string>
    <string name="action_settings">Settings</string>

    <string name="meglive_prompt">请在光线充足的情况下进行检测</string>
    <string name="meglive_detect_initfailed">检测器初始化失败</string>
    <string name="meglive_camera_initfailed">打开前置摄像头失败</string>
    <string name="meglive_getpermission_motion">请打开手机读取运动数据权限</string>
    <string name="meglive_phone_vertical">请竖直握紧手机</string>
    <string name="meglive_keep_eyes_open">请勿用手遮挡眼睛</string>
    <string name="meglive_keep_mouth_open">请勿用手遮挡嘴巴</string>
    <string name="face_not_found">请让我看到您的正脸</string>
    <string name="face_too_dark">请让光线再亮点</string>
    <string name="face_too_bright">请让光线再暗点</string>
    <string name="face_too_small">请再靠近一些</string>
    <string name="face_too_large">请再离远一些</string>
    <string name="face_too_blurry">请避免侧光和背光</string>
    <string name="face_out_of_rect">请保持脸在人脸框中</string>
    <string name="meglive_pitch">缓慢点头</string>
    <string name="meglive_yaw">左右摇头</string>
    <string name="meglive_mouth_open_closed">张嘴</string>
    <string name="meglive_eye_open_closed">眨眼</string>
    <string name="meglive_pos_yaw_left">左转</string>
    <string name="meglive_pos_yaw_right">右转</string>
    <string name="tipsmouth">Open your mouth and close.</string>
    <string name="tipblink">Do blink with your eyes.</string>
    <string name="tippose">Rotate your pose vertically.</string>
    <string name="facelost">Face Lost</string>
    <string name="timeout">超时</string>
    <string name="authok">Success</string>
    <string name="aufail">Failed</string>
    <string name="steps">活体检测:</string>
    <string name="pos_detection">POS</string>
    <string name="mouth_detection">MOUTH</string>
    <string name="blink_detection">BLINK</string>

    <array name="detect_type">
        <item>眨眼</item>
        <item>张嘴</item>
        <item>摇头</item>
    </array>
    <array name="detect_result">
        <item></item>
        <item>LIVEPASS</item>
        <item>人脸追踪失败</item>
        <item>超时失败</item>
        <item>LIVENOTPASS</item>
    </array>

    <string name="loading_text">使用说明：\n1、首先您需要输入姓名；\n2、之后您需要按照屏幕上的提示完成3个动作，以通过活体检测，同时软件会将您的人脸图像发送至服务器进行人脸验证；\n3、如果您没有通过活体检测或者人脸验证，则登录失败，反之则登录成功。</string>
    <string name="loading_confirm">OK,I Know</string>
    <string name="netowrk_parse_failed">解析服务器数据失败</string>
    <string name="network_error">网络请求失败</string>
    <string name="verify_error">验证失败</string>
    <string name="verify_success">验证成功</string>
    <string name="liveness_detection_failed">活体检测失败</string>
    <string name="liveness_detection_failed_timeout">活体检测超时失败</string>
    <string name="liveness_detection_failed_action_blend">活体检测动作错误</string>
    <string name="liveness_detection_failed_not_video">活体检测连续性检测失败</string>
    <string name="novalidframe">没有合适的图像用于人脸识别</string>
</resources>
