<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/lay_16"
        android:gravity="center"
        android:textSize="@dimen/font_18"
        android:text="@string/contact_auth_string"
        android:textStyle="bold"
        android:textColor="@color/defaultTextColor"
        />

    <TextView
        android:id="@+id/read_authbook_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/lay_8"
        android:gravity="center"
        android:clickable="true"
        android:textSize="@dimen/font_12"
        android:text="@string/read_auth_book"
        android:textColor="@color/gray"
        android:autoLink="all"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:alpha="0.6"
        android:background="@color/darker_gray2"/>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textColor="@color/base_app_color"
            android:text="@string/confirm_btn"
            android:textSize="@dimen/font_18"/>


</LinearLayout>