<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
                android:background="@color/white">

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/gray"
        android:layout_marginTop="10dip"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/lay_48"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:padding="@dimen/lay_15"
        android:textSize="@dimen/font_16"
        android:textColor="@color/defaultTextColor"
        android:text="@string/feedback" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:alpha="0.6"
        android:background="@color/darker_gray2"/>
    <EditText
        android:id="@+id/et_feed_back"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="@dimen/lay_12"
        android:layout_marginLeft="@dimen/lay_16"
        android:layout_marginRight="@dimen/lay_16"
        android:layout_marginTop="@dimen/lay_15"
        android:background="@drawable/edit_bg"
        android:hint="@string/feedback_hint"
        android:gravity="top"
        android:textColor="@color/defaultTextColor"
        android:textColorHint="@color/defaulthintTextColor"
        android:padding="@dimen/lay_8"
        android:textSize="@dimen/font_14"/>


    <Button
        android:id="@+id/btn_commit"
        android:clickable="false"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_login_submit_lock"
        android:text="@string/submit_feedback_hint"
        android:textColor="@color/white"
        android:textSize="@dimen/font_18"
        />


</LinearLayout>
