<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_portrait"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:contentDescription="@null"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/tv_version_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/space_5"
            android:textColor="@color/dimgrey"
            android:textSize="@dimen/text_size_16" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:alpha="0.6"
            android:background="@color/darker_gray2"
            android:layout_marginTop="10dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="50dip"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dip">

        <TextView
            android:id="@+id/tv_oscsite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:text="@string/osc_site"
            android:textColor="@color/dimgrey" />


        <TextView
            android:id="@+id/tv_knowmore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/know_more"
            android:textColor="@color/dimgrey" />
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:text="@string/copyright"
        android:textColor="@color/dimgrey" />

</LinearLayout>