<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/traceroute_rootview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <View
                android:layout_width="match_parent"
                android:layout_height="50dip"/>
            <ImageView
                android:layout_width="60dip"
                android:layout_height="60dip"
                android:scaleType="fitXY"
                android:src="@mipmap/gcs_alipay_logo"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/alipay_tip_string"
                android:layout_marginTop="15dip"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_auth_username"
            android:layout_width="match_parent"
            android:layout_height="@dimen/lay_60"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/lay_28"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/lay_15"
                android:src="@mipmap/gcs_username_logo" />

            <TextView
                android:layout_width="@dimen/lay_52"
                android:layout_height="wrap_content"
                android:text="@string/auth_username"
                android:textColor="@color/base_app_color"
                android:textSize="@dimen/font_16" />

            <EditText
                android:id="@+id/et_auth_username"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:background="@null"
                android:ems="15"
                android:focusable="true"
                android:hint="@string/username_hinttip_string"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:minLines="1"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black_alpha_80"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/font_16" />
            <ImageView
                android:id="@+id/iv_auth_username_del"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:contentDescription="@null"
                android:scaleType="fitCenter"
                android:visibility="gone"
                app:srcCompat="@mipmap/ic_clear" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_marginLeft="@dimen/lay_15"
            android:layout_marginRight="@dimen/lay_15"
            android:alpha="0.6"
            android:background="@color/darker_gray2" />
        <LinearLayout
            android:id="@+id/ll_auth_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/lay_60"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/lay_28"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/lay_15"
                android:src="@mipmap/gcs_password_logo" />

            <TextView
                android:layout_width="@dimen/lay_52"
                android:layout_height="wrap_content"
                android:text="@string/hint_password"
                android:textColor="@color/base_app_color"
                android:textSize="@dimen/font_16" />

            <EditText
                android:id="@+id/et_auth_password"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:background="@null"
                android:ems="15"
                android:focusable="true"
                android:hint="@string/hint_input_passstring"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:minLines="1"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black_alpha_80"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/font_16" />
            <ImageView
                android:id="@+id/iv_auth_password_del"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:contentDescription="@null"
                android:scaleType="fitCenter"
                android:visibility="gone"
                app:srcCompat="@mipmap/ic_clear" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_marginLeft="@dimen/lay_15"
            android:layout_marginRight="@dimen/lay_15"
            android:alpha="0.6"
            android:background="@color/darker_gray2" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/lay_60"
            android:gravity="left"
            android:paddingLeft="@dimen/lay_15"
            android:paddingRight="@dimen/lay_15"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cb_agree_authbook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:layout_marginTop="10dip"
                android:textSize="@dimen/font_14"
                android:textColor="@color/defaultTextColor"
                android:text="@string/agreealipay_tip_string"/>

        </LinearLayout>


        <Button
            android:id="@+id/bt_auth_submit"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_login_submit"
            android:text="@string/confirm_btn"
            android:textColor="@color/white"
            android:textSize="@dimen/font_18"
            tools:targetApi="lollipop"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/lay_15">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="@dimen/lay_15"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_14"
                    android:textColor="@color/main_gray"
                    android:gravity="center"
                    android:text="*"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_14"
                    android:textColor="@color/main_gray"
                    android:text="温馨提示："/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginLeft="@dimen/lay_15"
                android:textSize="@dimen/font_14"
                android:textColor="@color/main_gray"
                android:text="我们不会保存您的账户密码"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginLeft="@dimen/lay_15"
                android:textSize="@dimen/font_14"
                android:textColor="@color/main_gray"
                android:text="请填写本人真实有效信息以便通过认证。"/>
        </LinearLayout>


    </LinearLayout>
</LinearLayout>